# arma-3-status-bot

./: .gitignore  Cargo.nix  Cargo.toml  LICENSE-MIT  flake.nix  rust-toolchain.toml  rustfmt.toml
.github/workflows/: nix.yml
src/: lib.rs  main.rs
