[package]
name = "arma-3-status-bot"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
a2s = { version = "0.5.2", features = ["async"] }
chrono = "0.4.33"
dotenv = "0.15.0"
humantime = "2.1.0"
palette = "0.7.4"
poise = "0.6.1"
tokio = { version = "1.36.0", features = ["rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
